Fix spacing on success story page

--- a/src/templates/success-story/styles.module.less
+++ b/src/templates/success-story/styles.module.less
@@ -167,9 +167,6 @@
     }
 
     @media (min-width: 1024px) {
-        padding-top: 100px;
-        padding-bottom: 100px;
-
         .dynamicHtml {
             gap: 30px;
         }
